--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+   <meta name="color-scheme" content="light">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+    />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 开启顶部安全区适配 -->
+    <van-nav-bar safe-area-inset-top />
+
+    <!-- 开启底部安全区适配 -->
+    <van-number-keyboard safe-area-inset-bottom />
+    <title></title>
+    <script>
+      if (localStorage.getItem("theme") === undefined || localStorage.getItem("theme") === null) {
+        localStorage.setItem("theme", "auto");
+      }
+      let theme = localStorage.getItem("theme");
+      let colorScheme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark": "light";
+      let isDark = theme === "dark" || (theme === "auto" && colorScheme === "dark");
+      isDark === true && document.body.classList.add("theme-dark");
+    </script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <!-- 生成一个快速原型，用于快速验证想法，或者用于演示项目。 -->
 </html>
