--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta name="color-scheme" content="light" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+  <head>
+    <meta name="color-scheme" content="light" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.png" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <!-- 开启顶部安全区适配 -->
-        <van-nav-bar safe-area-inset-top />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <!-- 开启顶部安全区适配 -->
+    <van-nav-bar safe-area-inset-top />
 
-        <!-- 开启底部安全区适配 -->
-        <van-number-keyboard safe-area-inset-bottom />
-        <title><%= title %></title>
-    </head>
-    <body ontouchstart="">
-        <div id="app"></div>
-        <script type="module" src="/src/main.js"></script>
-        <%- injectScript %>
-    </body>
-    <!-- 生成一个快速原型，用于快速验证想法，或者用于演示项目。 -->
+    <!-- 开启底部安全区适配 -->
+    <van-number-keyboard safe-area-inset-bottom />
+    <title><%= title %></title>
+  </head>
+  <body ontouchstart="">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+    <%- injectScript %>
+  </body>
+  <!-- 生成一个快速原型，用于快速验证想法，或者用于演示项目。 -->
 </html>
