将网页适配成移动

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta name="color-scheme" content="light" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no,viewport-fit=cover" />
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-
+    <script src="/js/preinstall.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
     <!-- 开启顶部安全区适配 -->
     <van-nav-bar safe-area-inset-top />
 
