--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
     <script type="module" src="/src/main.js"></script>
     <%- injectScript %>
   </body>
-  <!-- 生成一个快速原型，用于快速验证想法，或者用于演示项目。 -->
+  <!-- 生成一个快速原型，1用于快速验证想法，或者用于演示项目。 -->
 </html>
